* Accessor functions for dependent pairs have been renamed to bring them into
  line with standard accessor functions for pairs. The function `getWitness`
  is now `fst`, and `getProof` is `snd`.
* File Modes expanded: Append, ReadWriteTruncate, and ReadAppend added,
  Write is deprecated and renamed to WriteTruncate.
* C11 Extended Mode variations added to File Modes.

New in 0.10:
============

* 'class' and 'instance' are now deprecated keywords. They have been
  replaced by 'interface' and 'implementation' respectively. This is to
  properly reflect their purpose.
* (/) operator moved into new Fractional interface.
* Idris' logging infrastructure has been categorised. Command line and repl
  are available. For command line the option `--logging-categories CATS`
  is used to pass in the categories. Here `CATS` is a colon separated quoted
  string containing the categories to log. The REPL command is `logcats CATS`.
  Where `CATS` is a whitespace separated list of categoriese. Default is for
  all categories to be logged.
* New flag `--listlogcats` to list logging categories.`

New in 0.9.20:
==============

Language updates
----------------

* Improved unification by implementing a pattern unification rule
* The syntax `{{n}} quotes n without resolving it, allowing short syntax
  for defining new names. `{n} still quotes n to an existing name in scope.
* A new primitive operator prim__strSubstr for more efficient extraction of
  substrings. External code generators should implement this.
* The previous syntax for tactic proofs and the previous interactive prover
  are now deprecated in favour of reflected elaboration. They will be removed
  at some point in the future.
* Changed scoping rules for unbound implicits: any name which would be a
  valid unbound implicit is now *always* an unbound implicit. This is much
  more resilient to changes in inputs, but does require that function names
  be explicitly qualified when in argument position.