@@ -78,7 +78,7 @@ buildType info syn fc opts n ty' = do
 
          logElab 3 $ show ty ++ "\nElaborated: " ++ show tyT'
 
-         ds <- checkAddDef True False fc iderr defer
+         ds <- checkAddDef True False fc iderr True defer
          -- if the type is not complete, note that we'll need to infer
          -- things later (for solving metavariables)
          when (length ds > length is) -- more deferred than case blocks
@@ -173,7 +173,7 @@ elabType' norm info syn doc argDocs fc opts n nfc ty' = {- let ty' = piBind (par
          -- Productivity checking now via checking for guarded 'Delay'
          let opts' = opts -- if corec then (Coinductive : opts) else opts
          let usety = if norm then nty' else nty
-         ds <- checkDef fc iderr [(n, (-1, Nothing, usety, []))]
+         ds <- checkDef fc iderr True [(n, (-1, Nothing, usety, []))]
          addIBC (IBCDef n)
          addDefinedName n
          let ds' = map (\(n, (i, top, fam, ns)) -> (n, (i, top, fam, ns, True, True))) ds
@@ -255,7 +255,7 @@ elabPostulate info syn doc fc nfc opts n ty = do
     sendHighlighting [(nfc, AnnName n (Just PostulateOutput) Nothing Nothing)]
 
     -- remove it from the deferred definitions list
-    solveDeferred n
+    solveDeferred fc n
 
 elabExtern :: ElabInfo -> SyntaxInfo -> Docstring (Either Err PTerm) ->
                  FC -> FC -> FnOpts -> Name -> PTerm -> Idris ()
@@ -268,4 +268,4 @@ elabExtern info syn doc fc nfc opts n ty = do
     addIBC (IBCExtern (n, arity))
 
     -- remove it from the deferred definitions list
-    solveDeferred n
+    solveDeferred fc n
